--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       POSTGRES_DATABASE: aleph
 
   elasticsearch:
-    image: alephdata/aleph-elasticsearch:${ALEPH_TAG:-3.3.2}
+    image: alephdata/aleph-elasticsearch:${ALEPH_TAG:-3.3.6}
     hostname: elasticsearch
     environment:
       - discovery.type=single-node
@@ -26,14 +26,14 @@ services:
       - redis-data:/data
 
   convert-document:
-    image: alephdata/convert-document:${ALEPH_TAG:-3.3.2}
+    image: alephdata/convert-document:189c0e1d212b8f3adeaaae5b3c36b064954c76a5
     restart: on-failure
     tmpfs:
       - /tmp
       - /home/app/.config
 
   ingest-file:
-    image: alephdata/ingest-file:${ALEPH_TAG:-3.3.2}
+    image: alephdata/ingest-file:${ALEPH_TAG:-3.3.6}
     tmpfs: /tmp
     volumes:
       - archive-data:/data
@@ -46,7 +46,7 @@ services:
       - aleph.env
 
   worker:
-    image: alephdata/aleph:${ALEPH_TAG:-3.3.2}
+    image: alephdata/aleph:${ALEPH_TAG:-3.3.6}
     command: aleph worker
     restart: on-failure
     links:
@@ -60,9 +60,9 @@ services:
       - archive-data:/data
     env_file:
       - aleph.env
-
+  
   shell:
-    image: alephdata/aleph:${ALEPH_TAG:-3.3.2}
+    image: alephdata/aleph:${ALEPH_TAG:-3.3.6}
     command: /bin/bash
     links:
       - postgres
@@ -80,7 +80,7 @@ services:
       - aleph.env
 
   api:
-    image: alephdata/aleph:${ALEPH_TAG:-3.3.2}
+    image: alephdata/aleph:${ALEPH_TAG:-3.3.6}
     command: gunicorn -w 6 -b 0.0.0.0:8000 --log-level debug --log-file - aleph.manage:app
     expose:
       - 8000
@@ -98,7 +98,7 @@ services:
       - aleph.env
 
   ui:
-    image: alephdata/aleph-ui-production:${ALEPH_TAG:-3.3.2}
+    image: alephdata/aleph-ui-production:${ALEPH_TAG:-3.3.6}
     links:
       - api
     ports:
@@ -109,4 +109,3 @@ volumes:
   postgres-data: {}
   redis-data: {}
   elasticsearch-data: {}
-
